# Middle-earth

./: README.md
middle_earth/: db.sqlite3  manage.py
middle_earth/character/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
middle_earth/character/migrations/: 0001_initial.py  0002_category_characters_cat.py  0003_alter_category_options_alter_characters_options_and_more.py  0004_alter_characters_slug.py  0005_category_slug.py  0006_alter_category_slug.py
middle_earth/middle_earth/: asgi.py  settings.py  urls.py  wsgi.py
middle_earth2/: .env  docker-compose.yml  plan.txt  pyproject.toml
middle_earth2/middle_earth/: __init__.py  __main__.py
middle_earth2/middle_earth/config/: __init__.py  default.py  utils.py
middle_earth2/middle_earth/crud/: __init__.py  character.py
middle_earth2/middle_earth/db/: __init__.py  alembic.ini
middle_earth2/middle_earth/db/connection/: __init__.py  session.py
middle_earth2/middle_earth/db/migrator/: __main__.py  env.py
middle_earth2/middle_earth/db/migrator/versions/: 2024-10-07_4feac3a50b8f_.py  2024-10-07_7201b7019d34_.py  2024-10-07_7e8c9b38d8d8_.py
middle_earth2/middle_earth/db/models/: __init__.py  character.py  user.py  word.py
middle_earth2/middle_earth/endpoints/: __init__.py  health_check.py  main.py
middle_earth2/middle_earth/front_endpoints/: __init__.py  character.py
middle_earth2/middle_earth/schemas/: __init__.py  character.py
middle_earth2/middle_earth/static/styles/: character.css
middle_earth2/middle_earth/templates/: character.html
(+10 files in other folders)
